--- a/AboutUs-ContactUs.css
+++ b/AboutUs-ContactUs.css
@@ -303,7 +303,12 @@ section#header {
     {
         margin-bottom:.5rem;
         width:100%;
+        padding:.75rem;
     }
+    #Main-nav-bar #nav-bar-container #send-req-btn{
+    display:none;
+    }
+    
 }
 @media (min-width:1920px) {
     #Main-Footer .links-container,
