--- a/AboutUs-ContactUs.css
+++ b/AboutUs-ContactUs.css
@@ -305,7 +305,7 @@ section#header {
         width:100%;
         padding:.75rem;
     }
-    #Main-nav-bar #nav-bar-container #send-req-btn{
+    #Main-nav-bar #nav-bar-container #send-req-btn br {
     display:none;
     }
     
